- Downgrade require_all to v1.5

* Mon Nov 27 2017 - version 0.11.0
- Fix `ModelAdapter::ActiveRecord` for AR 4.2
- AR 4.1 not supported anymore

* Tue Sep 12 2017 - version 0.10.0
- Relax dependency version requirements

* Sat Apr 22 2017 - version 0.9.0
- Optionally forbid loading parameter validators from model

* Fri Feb 10 2017 - version 0.8.0
- Protocol version 1.2
- Server.base_url: support for proxied https
- Fix typos and scoping in Spec::ApiBuilder
- Typed parameters can be set as protected, i.e. their values are to be
  visually hidden (like passwords)
- ActiveRecord adapter: resolve URL parameters for objects returned by the Index
  action using the Show action as a fallback

* Fri Nov 25 2016 - version 0.7.1
- Require haveapi-client 0.7.0

* Thu Nov 24 2016 - version 0.7.0
- Blocking actions
- Attempt to authenticate even for actions that don't require auth
- Authentication methods have documented text descriptions
- Examples can contain URL parameters, message, errors and HTTP status code
- Examples are rendered in HaveAPI client languages, showing a snippet of
  code generated from the example
- Allow APIs to set HTTP status code
- New hook HaveAPI::Server.description_exception
- Online doc: link to prebuilt haveapi-webui at webui.haveapi.org
- Print errors and exceptions in development mode
- New extension ExceptionMailer
- Fixed HaveAPI::Hooks.stop
- Use DateTime.iso8601 to parse dates

* Tue Oct 18 2016 - version 0.6.0
- Token authentication: fix output of action renew
- ActiveRecord: fix parsing of includes
- Params.use: fix nested calls

* Mon Apr 18 2016 - version 0.5.3
- ActiveRecord.ar_parse_includes: ignore not existing associations
- Paginable: remove default values for limit and offset parameters

* Thu Mar 03 2016 - version 0.5.2
- Fix ActiveRecord dependency
- Require json
- Fix params_spec

* Fri Feb 26 2016 - version 0.5.1
- Fix call of an empty hook

* Tue Feb 9 2016 - version 0.5.0
- Helper methods for testing APIs