@@ -4,6 +4,10 @@ module HaveAPI
       @title = title
     end
 
+    def authorize(&block)
+      @authorization = block
+    end
+
     def url_params(*params)
       @url_params = params
     end
@@ -36,20 +40,29 @@ module HaveAPI
       @comment = str
     end
 
+    def authorized?(context)
+      if (context.endpoint || context.current_user) \
+          && @authorization && !@authorization.call(context.current_user)
+        false
+      else
+        true
+      end
+    end
+
     def provided?
       instance_variables.detect do |v|
         instance_variable_get(v)
       end ? true : false
     end
 
-    def describe
+    def describe(context)
       if provided?
         {
             title: @title,
             comment: @comment,
             url_params: @url_params,
-            request: @request,
-            response: @response,
+            request: filter_input_params(context, @request),
+            response: filter_output_params(context, @response),
             status: @status.nil? ? true : @status,
             message: @message,
             errors: @errors,
@@ -57,6 +70,46 @@ module HaveAPI
         }
       else
         {}
+      end
+    end
+
+    protected
+    def filter_input_params(context, input)
+      case context.action.input.layout
+      when :object, :hash
+        context.authorization.filter_input(
+          context.action.input.params,
+          ModelAdapters::Hash.output(context, input),
+        )
+
+      when :object_list, :hash_list
+        input.map do |obj|
+          context.authorization.filter_input(
+            context.action.input.params,
+            ModelAdapters::Hash.output(context, obj),
+            true
+          )
+        end
+      end
+    end
+
+    def filter_output_params(context, output)
+      case context.action.output.layout
+      when :object, :hash
+        context.authorization.filter_output(
+          context.action.output.params,
+          ModelAdapters::Hash.output(context, output),
+          true
+        )
+
+      when :object_list, :hash_list
+        output.map do |obj|
+          context.authorization.filter_output(
+            context.action.output.params,
+            ModelAdapters::Hash.output(context, obj),
+            true
+          )
+        end
       end
     end
   end
