@@ -1,0 +1,28 @@
+module HaveAPI
+  class ExampleList
+    def initialize
+      @examples = []
+    end
+
+    # @param example [Example]
+    def <<(example)
+      @examples << example
+    end
+
+    def describe(context)
+      ret = []
+
+      @examples.each do |e|
+        ret << e.describe(context) if e.authorized?(context)
+      end
+
+      ret
+    end
+
+    def each(&block)
+      @examples.each(&block)
+    end
+
+    include Enumerable
+  end
+end
